[metadata]
# replace with your username:
name = python_libratone_zipp
version = 1.0.0
author = Chouffy
author_email = git@chouffy.net
description = Libratone Zipp controller library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chouffy/python_libratone_zipp
project_urls =
    Bug Tracker = https://github.com/Chouffy/python_libratone_zipp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src